fix: fix layout gaps around page cards

--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -20,8 +20,6 @@
 $page-card-padding-width: 1.65rem;
 
 .page-card {
-  margin-top: margins.$m-4;
-  margin-bottom: margins.$m-4;
   padding: 2rem $page-card-padding-width;
   border-radius: 1rem;
   background-color: var(--page-card);
